# django-shop

./: LICENSE  README.md  pyproject.toml
shop/: settings.py  urls.py
web/: admin.py  carrito.py  forms.py  models.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_cliente.py  0003_pedido_pedidodetalle.py
web/templates/: index.html  layout.html
