[project]
name = "django-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<5.0",
    "django-admin-tailwind>=0.0.31",
    "django-paypal>=2.1",
    "mysqlclient>=2.2.7",
    "pillow>=11.3.0",
    "setuptools>=80.9.0",
]
